<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/boxlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomePageActivity" >

  

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/welcome" />

    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignTop="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome"
        android:src="@drawable/welcome_ecuador" />
    
    <Button
        android:id="@+id/InfoGeneralButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcomeImage"
        android:layout_marginBottom="28dp"
        android:text="@string/infogeneral" />

    <Button
        android:id="@+id/CategoriesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InfoGeneralButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/categories" />
    
     <Button
        android:id="@+id/MapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     	android:layout_below="@+id/CategoriesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/map" />

</RelativeLayout>